--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
     		<h5>Welcome , I'm DarkStarLan<h5>
-		<img src="https://tse3-mm.cn.bing.net/th/id/OIP-C.QuBdFny-sxO7tWwzIldsZAAAAA?w=168&h=129&c=7&r=0&o=5&dpr=1.25&pid=1.7" alt="">
+		<img src="" alt="">
 		<img src="https://github.com/DarkStarLan/DarkStarLan.github.io/blob/main/img1.jpg?raw=true" alt="">
 	</body>
 </html>
