--- a/home.html
+++ b/home.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8">
+		<meta charset="utf-8" />
 		<title></title>
+		<style type="text/css">
+			#mian{
+				background-color: indigo;
+				width: 0 auto;
+				height: 2000px;
+				-webkit-filter: brightness(0.4);
+			}
+			#d1{
+				width: 0 auto;
+				height: 30px;
+			}
+			#d2{
+				background-color: darkturquoise;
+				color: orangered;
+				font-size: 80px;
+			}
+		</style>
 	</head>
 	<body>
-    		<h4>Welcome , I'm DarkStarLan , QQ : 1621582607</h4>
-		<a href="https://space.bilibili.com/1905544253">关于网站作者</a>
+		<div id="d1">
+			<h2>DarkStarLan</h2>
+		</div>
+		<div id="d2">
+			Welcome , this is DarkStarLanguage
+		</div>
+		<div id="mian">
+			Hello World
+		</div>
 	</body>
 </html>
