--- a/home.html
+++ b/home.html
@@ -1,35 +1,152 @@
 <!DOCTYPE html>
 <html>
+	<!-- https://blog.csdn.net/qq_43592352/article/details/88625248 -->
 	<head>
-		<meta charset="utf-8" />
+		<meta charset="utf-8">
 		<title></title>
 		<style type="text/css">
-			#mian{
-				background-color: indigo;
-				width: 0 auto;
-				height: 2000px;
-				-webkit-filter: brightness(0.4);
+			.background{
+				width: auto;
+				height: 1000px;
+			}
+			#lan{
+				width: 360px;
+				height: 34px;
+				position: relative;
+				margin: auto;
+			}
+			.right{
+				/* 按钮属性 */
+				font-size: 20px;
+				width: 100px;
+				border-radius: 6px;
+				height: 34px;
+				box-shadow: 0 0 0px #999;
+				transition: all 0.2s;
+				position: relative;
+				left: 10px;
+			}
+			.right:hover{
+				color: orangered;
+				background: skyblue;
+				box-shadow: 0 5px 10px #999;
+			}
+			.class1{
+				/* 按钮间隔 */
+				display: inline-block;
+				width: 120px;
+				height: 34px;
+				float: left;
+				position: relative;
+			}
+			#d0{
+				width: 300px;
+				height: 429px;
+				position: relative;
+				margin: auto;
+				background: #FFB6C1;
+				border-radius: 20px;
+				transition: all 0.2s;
+			}
+			#d0:hover{
+				box-shadow: 2px 2px 10px #808080;
 			}
 			#d1{
-				width: 0 auto;
-				height: 30px;
+				/* background: skyblue; */
+				width: 230px;
+				height: 255px;
+				position: relative;
+				margin: auto;
+				top: 28px;
 			}
-			#d2{
-				background-color: darkturquoise;
-				color: orangered;
-				font-size: 80px;
+			.c1{
+				width: 220px;
+				height: 30px;
+				border-radius: 4px;
+				position: relative;
+				left: 1px;
+			}
+			text{
+				display: inline-block;
+				height: 32px;
+				font-size: 20px;
+				line-height: 32px;
+				color: #808080;
+				text-align: center;
+				position: relative;
+				left: 5px;
+			}
+			#bt1{
+				text-align: center;
+				font-weight: 900;
+				font-size: 16px;
+				color: transparent;
+				background: aquamarine;
+				width: 30px;
+				height: 30px;
+				border-radius: 40px;
+				position: relative;
+				top: 12px;
+				left: 100px;
+				/* transition: all 0.4s,color 0.2s; */
+				transition: all 0.4s;
+			}
+			#bt1:hover{
+				background: limegreen;
+				box-shadow: 0 0 5px orangered,0 0 20px yellow;
+				/* color: blue; */
+				border-radius: 3px;
+				width: 60px;
+				height: 30px;
+				left: 85px;
+				/* transition: all 0.4s,color 1s; */
 			}
 		</style>
 	</head>
 	<body>
-		<div id="d1">
-			<h2>DarkStarLan</h2>
-		</div>
-		<div id="d2">
-			Welcome , this is DarkStarLanguage
-		</div>
-		<div id="mian">
-			Hello World
+		<div class="background">
+			<h1 style="text-align: center;">Welcome</h1>
+			<hr>
+			<div id="lan">
+				<div class="class1">
+					<a href="https://darkstarlan.github.io/">
+						<button class="right">默认主页</button>
+					</a>
+				</div>
+				<div class="class1">
+					<a href="https://darkstarlan.github.io/search.html">
+						<button class="right">导航页</button>
+					</a>
+				</div>
+				<div class="class1">
+					<a href="https://github.com/">
+						<button class="right">GitHub</button>
+					</a>
+				</div>
+			</div>
+			<hr>
+			<div id="d0">
+				<div id="d1">
+					<form action="https://tts.baidu.com/text2audio" method="get">
+						<text style="color: orangered;">*输入需要转换的文本</text>
+						<input type="text" name="tex" placeholder="输入内容" class="c1" value="" />
+						<text>修改cuid值</text>
+						<input type="text" name="cuid" placeholder="baike" class="c1" value="baike" />
+						<text>修改lan值</text>
+						<input type="text" name="lan" placeholder="ZH" class="c1" value="ZH" />
+						<text>修改ctp值</text>
+						<input type="text" name="ctp" placeholder="1" class="c1" value="1" />
+						<text>修改pdt值</text>
+						<input type="text" name="pdt" placeholder="301" class="c1" value="301" />
+						<button id="bt1">
+							转换
+							<input type="submit" value="转换为音频" hidden="hidden"/>
+						</button>
+					</form>
+				</div>
+			</div>
+			<!-- https://tts.baidu.com/text2audio?tex=1&cuid=baike&lan=ZH&ctp=1&pdt=301&vol=9&rate=32&pelJ -->
+			<!-- https://tts.baidu.com/text2audio?tex=1&cuid=baike&lan=ZH&ctp=1&pdt=301 -->
 		</div>
 	</body>
 </html>
