--- a/search.html
+++ b/search.html
@@ -94,7 +94,7 @@
 			.class1{
 				/* 按钮间隔 */
 				width: 120px;
-				height: 30px;
+				height: 34px;
 				float: left;
 				position: relative;
 			}
@@ -107,6 +107,8 @@
 				
 				box-shadow: 0 0 0px #999;
 				transition: all 0.2s;
+				position: relative;
+				left: 10px;
 			}
 			.right:hover{
 				color: orangered;
@@ -114,7 +116,7 @@
 				box-shadow: 0 5px 10px #999;
 			}
 			#back0{
-				width: 1000px;
+				width: 1080px;
 				position: relative;
 				margin: auto;
 				top: 0;
@@ -148,6 +150,11 @@
 			</div>
 			<hr style="background-color: black; height: 3px; border: none;">
 			<div id="back0" class="clear">
+				<div class="class1">
+					<a href="https://darkstarlan.github.io/home.html">
+						<button class="right">主页</button>
+					</a>
+				</div>
 				<div class="class1">
 					<a href="https://www.msn.cn/zh-cn?OCID=fwdbahp">
 						<button class="right">MSN</button>
@@ -193,6 +200,7 @@
 			<div id="back1">
 				<h2 style="color: azure;">感谢使用本网站,网址详情:</h2>
 				<ol style="color: lightsalmon; font-weight: normal; font-size: 15px;">
+					<li>主页 : https://darkstarlan.github.io/home.html</li>
 					<li>MSN : https://www.msn.cn/zh-cn?OCID=fwdbahp</li>
 					<li>百度 : https://www.baidu.com/</li>
 					<li>希沃 : https://class.seewo.com/student/app/</li>
