--- a/home.html
+++ b/home.html
@@ -80,7 +80,7 @@
 				text-align: center;
 				font-weight: 900;
 				font-size: 16px;
-				color: transparent;
+				/* color: transparent; */
 				background: aquamarine;
 				width: 30px;
 				height: 30px;
@@ -139,7 +139,6 @@
 						<text>修改pdt值</text>
 						<input type="text" name="pdt" placeholder="301" class="c1" value="301" />
 						<button id="bt1">
-							转换
 							<input type="submit" value="转换为音频" hidden="hidden"/>
 						</button>
 					</form>
