--- a/search.html
+++ b/search.html
@@ -116,7 +116,7 @@
 				box-shadow: 0 5px 10px #999;
 			}
 			#back0{
-				width: 1080px;
+				width: 1320px;
 				position: relative;
 				margin: auto;
 				top: 0;
@@ -195,11 +195,21 @@
 						<button class="right">GitHub</button>
 					</a>
 				</div>
+				<div class="class1">
+					<a href="https://mirrors.tuna.tsinghua.edu.cn/qt/archive/qt/">
+						<button class="right">QT下载</button>
+					</a>
+				</div>
+				<div class="class1">
+					<a href="https://sourceforge.net/projects/orwelldevcpp/files/latest/download">
+						<button class="right">Dev-C++</button>
+					</a>
+				</div>
 				<!-- https://tts.baidu.com/text2audio?tex=内容&cuid=baike&lan=ZH&ctp=1&pdt=301&vol=9&rate=32&pelJ -->
 			</div>
 			<div id="back1">
 				<h2 style="color: azure;">感谢使用本网站,网址详情:</h2>
-				<ol style="color: lightsalmon; font-weight: normal; font-size: 15px;">
+				<ul style="color: lightsalmon; font-weight: normal; font-size: 15px;">
 					<li>主页 : https://darkstarlan.github.io/home.html</li>
 					<li>MSN : https://www.msn.cn/zh-cn?OCID=fwdbahp</li>
 					<li>百度 : https://www.baidu.com/</li>
@@ -209,7 +219,9 @@
 					<li>哔哩哔哩 : https://www.bilibili.com/</li>
 					<li>离线游戏 : edge://surf/</li>
 					<li>Github : https://github.com/</li>
-				</ol>
+					<li>QT下载 : https://mirrors.tuna.tsinghua.edu.cn/qt/archive/qt/</li>
+					<li>Dev-C++ : https://sourceforge.net/projects/orwelldevcpp/files/latest/download</li>
+				</ul>
 			</div>
 		</div>
 	</body>
