--- a/search.html
+++ b/search.html
@@ -116,7 +116,7 @@
 				box-shadow: 0 5px 10px #999;
 			}
 			#back0{
-				width: 1320px;
+				width: 1440px;
 				position: relative;
 				margin: auto;
 				top: 0;
@@ -205,6 +205,11 @@
 						<button class="right">Dev-C++</button>
 					</a>
 				</div>
+				<div class="class1">
+					<a href="https://codebus.cn/bestans/easyx-for-mingw">
+						<button class="right">EasyX</button>
+					</a>
+				</div>
 				<!-- https://tts.baidu.com/text2audio?tex=内容&cuid=baike&lan=ZH&ctp=1&pdt=301&vol=9&rate=32&pelJ -->
 			</div>
 			<div id="back1">
@@ -220,7 +225,9 @@
 					<li>离线游戏 : edge://surf/</li>
 					<li>Github : https://github.com/</li>
 					<li>QT下载 : https://mirrors.tuna.tsinghua.edu.cn/qt/archive/qt/</li>
-					<li>Dev-C++ : https://sourceforge.net/projects/orwelldevcpp/files/latest/download</li>
+					<li>下载Dev-C++ : https://sourceforge.net/projects/orwelldevcpp/files/latest/download</li>
+					<li>下载EasyX : https://easyx.cn/download</li>
+					<li>配置EasyX : https://codebus.cn/bestans/easyx-for-mingw</li>
 				</ul>
 			</div>
 		</div>
