--- a/unity.html
+++ b/unity.html
@@ -14,7 +14,8 @@
 		<div id="id0">
 			<img src="img/Unity-logo.png" width="100px">
 			<a href="https://darkstarlan.github.io/search.html">导航页</a>
-			<a href="https://github.com/DarkStarLan/DarkStarLan.github.io/blob/main/cpp/dsl.cpp">下载扩展中的C++文件</a>
+			<a href="https://github.com/DarkStarLan/DarkStarLan.github.io/blob/main/cpp/dsl.cpp">下载扩展中的C++源文件</a>
+			<a href="https://github.com/DarkStarLan/DarkStarLan.github.io/blob/main/cpp/dsl.h">下载扩展中的C++头文件</a>
 		</div>
 	</body>
 </html>
