--- a/brief.html
+++ b/brief.html
@@ -314,7 +314,7 @@
 				<h5 class="nr1"; style="color: #fff34a;">谢续恒 / DarkStarLan</h5>
 				<h5 class="nr1">DarkStarLan，全称为DarkStarLanguage，来自谢续恒创作的科幻小说《星维暗语》。</h5>
 				<h5 class="nr1">谢续恒，男，生于2007年，现居山东济宁。编程爱好者，喜欢软件和游戏开发。同时也是科幻爱好者，著有长篇科幻小说《星维暗语》，短篇科幻小说《幕境》等。小黑子一枚。</h5>
-				<h5 class="nr1">2014年提出无规律论，2021年完善并写入《星维暗语》，称为《星维暗语》世界中的重要组成部分。2022年提出宇宙泡结构猜想，对人类社会产生了不值一提的贡献。</h5>
+				<h5 class="nr1">2014年提出无规律论，2021年完善并写入《星维暗语》，成为《星维暗语》世界中的重要组成部分。2022年提出宇宙泡结构猜想，对人类社会做出了不值一提的贡献。</h5>
 				<h5 class="nr1"; style="color: orangered;">联系方式</h5>
 				<h5 class="nr1"; style="color: aliceblue;">WeChat:13963774465</h5>
 				<h5 class="nr1"; style="color: aliceblue;">QQ:1621582607</h5>
