--- a/404.html
+++ b/404.html
@@ -1,1 +1,3 @@
 <h5>sorry , we couldn't find this page ... visit DarkStarLan.github.io to go to the home page.</h5>
+<h5>Do you want to visit the main page?</h5>
+<a href="https://darkstarlan.github.io/home.html">Click Me</a>
