--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
 				height: 1000px;
 			}
 			#lan{
-				width: 360px;
+				width: 480px;
 				height: 34px;
 				position: relative;
 				margin: auto;
@@ -121,6 +121,11 @@
 				<div class="class1">
 					<a href="https://github.com/">
 						<button class="right">GitHub</button>
+					</a>
+				</div>
+				<div class="class1">
+					<a href="https://darkstarlan.github.io/brief.html">
+						<button class="right">个人简介</button>
 					</a>
 				</div>
 			</div>
