--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 	<!-- https://blog.csdn.net/qq_43592352/article/details/88625248 -->
 	<head>
 		<meta charset="utf-8">
-		<title></title>
+		<title>网站主页</title>
 		<style type="text/css">
 			.background{
 				width: auto;
