--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
-<h5>please wait ... </h5>
-<meta http-equiv="refresh" content="0;url=home.html">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>正在导航</title>
+</head>
+    <body>
+        <h4>正在跳转到首页，请稍后</h4>
+        <meta http-equiv="refresh" content="0;url=home.html">
+    </body>
+</html>
