--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>正在导航</title>
 </head>
     <body>
-        <h4>正在跳转到首页，请稍后</h4>
+        <h4>正在跳转到首页，请稍候~</h4>
         <meta http-equiv="refresh" content="0;url=home.html">
     </body>
 </html>
