--- a/404.html
+++ b/404.html
@@ -1,3 +1,12 @@
-<h5>sorry , we couldn't find this page ... visit DarkStarLan.github.io to go to the home page.</h5>
-<h5>Do you want to visit the main page?</h5>
-<a href="https://darkstarlan.github.io/home.html">Click Me</a>
+<!DOCTYPE html>
+<html lang="zn-CH">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>未找到网页</title>
+</head>
+    <body>
+        <h1>抱歉，<br> 我们找不到这个页面，请检查地址是否输入错误</h1>
+        <p>您想要访问我们的网站主页吗? <a href="https://darkstarlan.github.io/home.html">访问主页</a></p> 
+    </body>
+</html>
