--- a/download/cpp.html
+++ b/download/cpp.html
@@ -68,8 +68,8 @@
             <h1>欢迎，这里提供给您下载服务</h1>
         </div>
         <div id="head">
-            <div class="class1"><a href="#"><button class="buttonload">下载源文件</button></a></div>
-            <div class="class1"><a href="#"><button class="buttonload">下载头文件</button></a></div>
+            <div class="class1"><a href="https://github.com/DarkStarLan/DarkStarLan/blob/main/C%2B%2B/dsl.cpp"><button class="buttonload">下载源文件</button></a></div>
+            <div class="class1"><a href="https://github.com/DarkStarLan/DarkStarLan/blob/main/C%2B%2B/dsl.h"><button class="buttonload">下载头文件</button></a></div>
         </div>
     </body>
 </html>
