--- a/home.html
+++ b/home.html
@@ -3,14 +3,15 @@
 	<!-- https://blog.csdn.net/qq_43592352/article/details/88625248 -->
 	<head>
 		<meta charset="utf-8">
-		<title>网站主页</title>
+		<title></title>
 		<style type="text/css">
 			.background{
 				width: auto;
 				height: 1000px;
 			}
 			#lan{
-				width: 480px;
+				/* 修改头部选项栏长度 */
+				width: 720px;
 				height: 34px;
 				position: relative;
 				margin: auto;
@@ -33,7 +34,6 @@
 			}
 			.class1{
 				/* 按钮间隔 */
-				display: inline-block;
 				width: 120px;
 				height: 34px;
 				float: left;
@@ -43,9 +43,11 @@
 				width: 300px;
 				height: 429px;
 				position: relative;
-				margin: auto;
-				background: #FFB6C1;
+				/* margin: auto; */
+				background: #91404c;
 				border-radius: 20px;
+				position: relative;
+				left: 20px;
 				transition: all 0.2s;
 			}
 			#d0:hover{
@@ -71,7 +73,7 @@
 				height: 32px;
 				font-size: 20px;
 				line-height: 32px;
-				color: #808080;
+				color: #bea1a1;
 				text-align: center;
 				position: relative;
 				left: 5px;
@@ -101,11 +103,24 @@
 				left: 85px;
 				/* transition: all 0.4s,color 1s; */
 			}
+			#footer {
+			    height: 40px;
+	            line-height: 40px;
+	            /* position: fixed; */
+	            bottom: 0;
+                width: 100%;
+                text-align: center;
+		        background: #333;
+		        color: #fff;
+                font-family: Arial;
+		        font-size: 16px;
+		        letter-spacing: 1px;
+			}
 		</style>
 	</head>
-	<body>
+	<body style="background-color: rgb(13, 17, 22);" id="main">
 		<div class="background">
-			<h1 style="text-align: center;">Welcome</h1>
+			<h1 style="text-align: center; color: rgb(0, 198, 198);">欢迎，这里是DarkStarLan主页</h1>
 			<hr>
 			<div id="lan">
 				<div class="class1">
@@ -128,12 +143,30 @@
 						<button class="right">个人简介</button>
 					</a>
 				</div>
+				<div class="class1">
+					<a href="https://darkstarlan.github.io/download/cpp.html">
+						<button class="right">相关下载</button>
+					</a>
+				</div>
+				<div class="class1">
+					<a href="https://darkstarlan.github.io/notes/cpp.html">
+						<button class="right">学习笔记</button>
+					</a>
+				</div>
 			</div>
 			<hr>
+			<h1 style="font-size: 80px; color:aquamarine;">这里有</h1> <br>
+			<h1 style="color:rgb(201, 201, 89);">超棒的各种<a href="#" style="color:rgb(252, 161, 82); font-size: 40px;">学习笔记</a></h1>
+			<img src="img/note1.png" alt="一个好棒好棒的笔记" width="900px">
+			<h1 style="color:rgb(201, 201, 89); text-align: right;">超好玩的各种<a href="#" style="color:rgb(252, 161, 82); font-size: 40px;">程序</a></h1>
+			<div align="right"><img src="img/game1.png" alt="一个好棒好棒的游戏" width="900px"></div>
+			<h1 style="color:rgb(201, 201, 89);">当然，还有超多精致的<text style="color:rgb(252, 161, 82); font-size: 40px;">网页</text> 等待您<a href="#main" style="color: rgb(255, 255, 128);">发现</a></h1>
+			<span><text style="font-size: 40px; color:rgb(0, 198, 198);">您可以在下方输入一些文字，我们可以帮助您转为语音</text> (利用百度文字转语音) </span>
+			<div><br></div>
 			<div id="d0">
 				<div id="d1">
 					<form action="https://tts.baidu.com/text2audio" method="get">
-						<text style="color: orangered;">*输入需要转换的文本</text>
+						<text style="color: rgb(255, 202, 183);">*输入需要转换的文本</text>
 						<input type="text" name="tex" placeholder="输入内容" class="c1" value="" />
 						<text>修改cuid值</text>
 						<input type="text" name="cuid" placeholder="baike" class="c1" value="baike" />
@@ -149,8 +182,7 @@
 					</form>
 				</div>
 			</div>
-			<!-- https://tts.baidu.com/text2audio?tex=1&cuid=baike&lan=ZH&ctp=1&pdt=301&vol=9&rate=32&pelJ -->
-			<!-- https://tts.baidu.com/text2audio?tex=1&cuid=baike&lan=ZH&ctp=1&pdt=301 -->
+			<div id="footer">感谢您的浏览，本网页由DarkStarLan搭建</div>
 		</div>
 	</body>
 </html>
