--- a/home.html
+++ b/home.html
@@ -5,6 +5,60 @@
 		<meta charset="utf-8">
 		<title></title>
 		<style type="text/css">
+			.lifang{
+				width: 200px;
+				height: 200px;
+				margin: 200px;
+				position: relative;
+				/* 设置transfo-style:保留子元素3D效果 */
+				transform-style: preserve-3d;
+				transform: rotate3d(1,1,1,0deg);
+				transition: all 5s;
+			}
+			.lifang:hover{
+				transform: rotate3d(1,1,1,720deg);
+			}
+			.page{
+				width: 200px;
+				height: 200px;
+				position: absolute;
+				left: 0;
+				top: 0;
+				/* 设定透明度 */
+				opacity: 1;
+				
+			}
+			
+			.Front{
+				background-color: orange;
+				background-size: 100% auto;
+				transform: translateZ(100px);
+			}
+			.Back{
+				background-color: red;
+				background-size: 100% auto;
+				transform: translateZ(-100px);
+			}
+			.Right{
+				background-color: blue;
+				background-size: 100% auto;
+				transform: rotateY(90deg) translateZ(100px);
+			}
+			.Left{
+				background-color: green;
+				background-size: 100% auto;
+				transform: rotateY(-90deg) translateZ(100px);
+			}
+			.Top{
+				background-color: yellow;
+				background-size: 100% auto;
+				transform: rotateX(90deg) translateZ(100px);;
+			}
+			.Bottom{
+				background-color: white;
+				background-size: 100% auto;
+				transform: rotateX(-90deg) translateZ(100px);;
+			}
 			.background{
 				width: auto;
 				height: 1000px;
@@ -156,11 +210,19 @@
 			</div>
 			<hr>
 			<h1 style="font-size: 80px; color:aquamarine;">这里有</h1> <br>
-			<h1 style="color:rgb(201, 201, 89);">超棒的各种<a href="#" style="color:rgb(252, 161, 82); font-size: 40px;">学习笔记</a></h1>
+			<h1 style="color:rgb(201, 201, 89);">超棒的各种<a href="https://darkstarlan.github.io/notes/cpp.html" style="color:rgb(252, 161, 82); font-size: 40px;">学习笔记</a></h1>
 			<img src="img/note1.png" alt="一个好棒好棒的笔记" width="900px">
-			<h1 style="color:rgb(201, 201, 89); text-align: right;">超好玩的各种<a href="#" style="color:rgb(252, 161, 82); font-size: 40px;">程序</a></h1>
+			<h1 style="color:rgb(201, 201, 89); text-align: right;">超好玩的各种<a href="https://darkstarlan.github.io/download/cpp.html" style="color:rgb(252, 161, 82); font-size: 40px;">程序</a></h1>
 			<div align="right"><img src="img/game1.png" alt="一个好棒好棒的游戏" width="900px"></div>
 			<h1 style="color:rgb(201, 201, 89);">当然，还有超多精致的<text style="color:rgb(252, 161, 82); font-size: 40px;">网页</text> 等待您<a href="#main" style="color: rgb(255, 255, 128);">发现</a></h1>
+			<div class="lifang">
+				<div class="page Front"></div>
+				<div class="page Back"></div>
+				<div class="page Left"></div>
+				<div class="page Right"></div>
+				<div class="page Top"></div>
+				<div class="page Bottom"></div>
+			</div>
 			<span><text style="font-size: 40px; color:rgb(0, 198, 198);">您可以在下方输入一些文字，我们可以帮助您转为语音</text> (利用百度文字转语音) </span>
 			<div><br></div>
 			<div id="d0">
