--- a/notes/cpp.html
+++ b/notes/cpp.html
@@ -6,50 +6,50 @@
     <title>学习笔记目录</title>
     <style type="text/css">
         #lan{
-				/* 修改头部选项栏长度(每个120px) */
-				width: 360px;
-				height: 34px;
-				position: relative;
-				margin: auto;
-			}
-			.right{
-				/* 按钮属性 */
-				font-size: 20px;
-				width: 100px;
-				border-radius: 6px;
-				height: 34px;
-				box-shadow: 0 0 0px #999;
-				transition: all 0.2s;
-				position: relative;
-				left: 10px;
-			}
-			.right:hover{
-				color: orangered;
-				background: skyblue;
-				box-shadow: 0 5px 10px #999;
-			}
-			.class1{
-				/* 按钮间隔 */
-				width: 120px;
-				height: 34px;
-				float: left;
-				position: relative;
-			}
-            text{
-                color: antiquewhite;
-                position: relative;
-                left: 20px;
-                font-size: 20px;
-            }
-            .content{
-                color: antiquewhite;
-                position: relative;
-                left: 20px;
-                font-size: 20px;
-            }
+			/* 修改头部选项栏长度(每个120px) */
+			width: 360px;
+			height: 34px;
+			position: relative;
+			margin: auto;
+		}
+		.right{
+			/* 按钮属性 */
+			font-size: 20px;
+			width: 100px;
+			border-radius: 6px;
+			height: 34px;
+			box-shadow: 0 0 0px #999;
+			transition: all 0.2s;
+			position: relative;
+			left: 10px;
+		}
+		.right:hover{
+			color: orangered;
+			background: skyblue;
+			box-shadow: 0 5px 10px #999;
+		}
+		.class1{
+			/* 按钮间隔 */
+			width: 120px;
+			height: 34px;
+			float: left;
+			position: relative;
+		}
+        text{
+            color: antiquewhite;
+            position: relative;
+           left: 20px;
+           font-size: 20px;
+        }
+        .content{
+            color: antiquewhite;
+            position: relative;
+           left: 20px;
+           font-size: 20px;
+        }
     </style>
 </head>
-    <body  style="background-color: rgb(13, 17, 22);" id="main">
+    <body style="background-color: rgb(13, 17, 22);" id="main">
         <div id="lan">
             <div class="class1">
                 <a href="https://darkstarlan.github.io/">
@@ -73,18 +73,18 @@
             <li>
                 <text style="font-size: 30px;">C++基础</text>
                 <ul>
-                    <li><a href="#" class="content">01 数据类型</a></li>
-                    <li><a href="#" class="content">02 sizeof</a></li>
-                    <li><a href="#" class="content">03 实型</a></li>
-                    <li><a href="#" class="content">04 字符型</a></li>
-                    <li><a href="#" class="content">05 字符串型</a></li>
-                    <li><a href="#" class="content">06 布尔类型</a></li>
-                    <li><a href="#" class="content">07 数据的输入</a></li>
-                    <li><a href="#" class="content">08 算数运算符 - 加减乘除</a></li>
-                    <li><a href="#" class="content">09 算数运算符 - 取模</a></li>
-                    <li><a href="#" class="content">10 算数运算符 - 前后置递增</a></li>
-                    <li><a href="#" class="content">11 赋值运算符</a></li>
-                    <li><a href="#" class="content">12 比较运算符</a></li>
+                    <li><a href="cpp/0001.html" class="content">01 数据类型</a></li>
+                    <li><a href="cpp/0002.html" class="content">02 sizeof</a></li>
+                    <li><a href="cpp/0003.html" class="content">03 实型</a></li>
+                    <li><a href="cpp/0004.html" class="content">04 字符型</a></li>
+                    <li><a href="cpp/0005.html" class="content">05 字符串型</a></li>
+                    <li><a href="cpp/0006.html" class="content">06 布尔类型</a></li>
+                    <li><a href="cpp/0007.html" class="content">07 数据的输入</a></li>
+                    <li><a href="cpp/0008.html" class="content">08 算数运算符 - 加减乘除</a></li>
+                    <li><a href="cpp/0009.html" class="content">09 算数运算符 - 取模</a></li>
+                    <li><a href="cpp/0010.html" class="content">10 算数运算符 - 前后置递增</a></li>
+                    <li><a href="cpp/0011.html" class="content">11 赋值运算符</a></li>
+                    <li><a href="cpp/0012.html" class="content">12 比较运算符</a></li>
                 </ul>
             </li>
         </ul>
