--- a/notes/cpp/0002.html
+++ b/notes/cpp/0002.html
@@ -91,10 +91,10 @@ int main()
 	long num3 = 10;
 	long long num4 = 10;
 	
-	cout &lt; sizeof(short) &lt; endl;
-	cout &lt; sizeof(int) &lt; endl;
-	cout &lt; sizeof(long) &lt; endl;
-	cout &lt; sizeof(long long) &lt; endl;
+	cout &lt;&lt; sizeof(short) &lt;&lt; endl;
+	cout &lt;&lt; sizeof(int) &lt;&lt; endl;
+	cout &lt;&lt; sizeof(long) &lt;&lt; endl;
+	cout &lt;&lt; sizeof(long long) &lt;&lt; endl;
 	
 	return 0;
 }
