--- a/notes/cpp.html
+++ b/notes/cpp.html
@@ -84,7 +84,59 @@
                     <li><a href="cpp/0009.html" class="content">09 算数运算符 - 取模</a></li>
                     <li><a href="cpp/0010.html" class="content">10 算数运算符 - 前后置递增</a></li>
                     <li><a href="cpp/0011.html" class="content">11 赋值运算符</a></li>
-                    <li><a href="cpp/0012.html" class="content">12 比较运算符</a></li>
+                    <li><a href="cpp/0012.html" class="content">12 比较运算符</a></li>   
+                    <li><a href="cpp/.html" class="content"> 13 逻辑运算符-非.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 14 逻辑运算符-与.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 15 逻辑运算符-或.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 16 选择结构-单行if语句.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 17 选择结构-多行if语句.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 18 选择结构-多条件if语句.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 19 选择结构-嵌套if语句.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 20 选择结构案例-三只小猪称体重.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 21 选择结构-三目运算符.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 22 选择结构-switch语句.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 23 循环结构-while循环.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 24 循环结构案例-猜数字.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 25 循环结构-dowhile循环.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 26 循环结构案例-水仙花数.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 27 循环结构-for循环.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 28 循环结构案例-敲桌子.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 29 嵌套循环.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 30 嵌套循环案例-乘法口诀表.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 31 跳转语句-break语句.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 32 跳转语句-continue语句.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 33 跳转语句-goto语句.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 34 一维数组的定义.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 35 一维数组-数组名.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 36 一维数组案例-五只小猪称体重.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 37 一维数组案例-元素逆置.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 38 一维数组-冒泡排序.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 39 二维数组的定义.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 40 二维数组-数组名.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 41 二维数组案例-考试成绩统计.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 42 函数的定义.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 43 函数的调用.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 44 函数-值传递.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 45 函数-常见样式.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 46 函数的声明.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 47 - 1 函数的分文件编写.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 47 - 2 swap.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 48 指针的定义和使用.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 49 指针所占内存空间.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 50 空指针.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 51 野指针.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 52 const修饰指针.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 53 指针和数组.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 54 指针和函数.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 55 指针数组函数案例.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 56 结构体定义和使用.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 57 结构体数组.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 58 结构体指针.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 59 结构体嵌套结构体.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 60 结构体做函数参数.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 61 结构体中const使用场景.</a></li>
+                    <li><a href="cpp/.html" class="content"> 62 结构体案例1.cpp</a></li>
+                    <li><a href="cpp/.html" class="content"> 63 结构体案例2.cpp</a></li>
                 </ul>
             </li>
         </ul>
