--- a/notes/cpp/0001.html
+++ b/notes/cpp/0001.html
@@ -78,7 +78,7 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">01 数据类型</h1>
+        <h1 class="code">01 数据类型.cpp</h1>
         <pre>
             <code class="code">
 #include&lt;iostream&gt;
