--- a/notes/cpp/0002.html
+++ b/notes/cpp/0002.html
@@ -78,7 +78,7 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">02 sizeof</h1>
+        <h1 class="code">02 sizeof.cpp</h1>
         <pre>
             <code class="code">
 #include&lt;iostream&gt;
