--- a/notes/cpp/0005.html
+++ b/notes/cpp/0005.html
@@ -81,7 +81,7 @@
         <h1 class="code">05 字符串型.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostr&gt;am&gt;
+#include&lt;iostream&gt;
 using namespace std;
 #include&lt;string&gt;  //在用C++ 风格字符串时要包含这个头文件 
 
@@ -94,7 +94,7 @@ int main()
 	cout &lt;&lt; str &lt;&lt; endl;
 	
 	//C++风格字符串
-	//注意事项  包含一个头文件 #include&lt;str&gt&gt&gt&gt;ng&gt;
+	//注意事项  包含一个头文件 #include&lt;string&gt;
 	string str2 = "hello world";
 	cout &lt;&lt; str2 &lt;&lt; endl;
 	
