--- a/notes/cpp/0007.html
+++ b/notes/cpp/0007.html
@@ -81,7 +81,7 @@
         <h1 class="code">07 数据的输入.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostr&gt;am&gt;
+#include&lt;iostream&gt;
 using namespace std;
 #include&lt;string&gt;
 
@@ -90,27 +90,27 @@ int main()
 	//1.整型
 	int a = 0; 
 	cout &lt;&lt; "请给整型变量a赋值:" &lt;&lt; endl; 
-	c&gt&gt&gt;n &gt;&gt; a;
+	cin &gt;&gt; a;
 	cout &lt;&lt; "整型变量a=" &lt;&lt; a &lt;&lt; endl;
 	//2.浮点型 
 	float f = 3.14f;
 	cout &lt;&lt; "请给浮点型变量f赋值:" &lt;&lt; endl; 
-	c&gt&gt&gt&gt&gt&gt&gt&gt;n &gt;&gt; f;
+	cin &gt;&gt; f;
 	cout &lt;&lt; "浮点型变量f=" &lt;&lt; f &lt;&lt; endl;
 	//3.字符型 
 	char ch = 'a';
 	cout &lt;&lt; "请给字符型变量ch赋值:" &lt;&lt; endl; 
-	c&gt&gt&gt&gt&gt&gt&gt&gt;n &gt;&gt; ch;
+	cin &gt;&gt; ch;
 	cout &lt;&lt; "字符型变量ch=" &lt;&lt; ch &lt;&lt; endl;
 	//4.字符串型
 	string str = "hello";
 	cout &lt;&lt; "请给字符串型变量str赋值:" &lt;&lt; endl; 
-	c&gt&gt&gt&gt&gt&gt&gt&gt;n &gt;&gt; str;
+	cin &gt;&gt; str;
 	cout &lt;&lt; "字符串型变量str=" &lt;&lt; str &lt;&lt; endl;
 	//5.布尔型 
 	bool flag = false;
 	cout &lt;&lt; "请给布尔型变量flag赋值:" &lt;&lt; endl; 
-	c&gt&gt&gt&gt&gt&gt&gt&gt;n &gt;&gt; flag; //只要是非零的值都代表真 
+	cin &gt;&gt; flag; //只要是非零的值都代表真 
 	cout &lt;&lt; "布尔型变量flag=" &lt;&lt; flag &lt;&lt; endl;
 	
 	return 0;
