--- a/notes/cpp/0012.html
+++ b/notes/cpp/0012.html
@@ -81,7 +81,7 @@
         <h1 class="code">12 比较运算符.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostr&gt;am&gt;
+#include&lt;iostream&gt;
 using namespace std;
 
 int main()
@@ -97,9 +97,9 @@ int main()
 	
 	cout &lt;&lt; (a != b) &lt;&lt; endl;
 	
-	&gt&gt&gt&gt&gt&gt&gt;/ &gt;
+	// &gt;
 	
-	cout &lt;&lt; &gt;a &gt; b) &lt;&lt; endl;
+	cout &lt;&lt; (a &gt; b) &lt;&lt; endl;
 	
 	// &lt;
 	
@@ -107,7 +107,7 @@ int main()
 	
 	//
 	
-	cout &lt;&lt; &gt&gt&gt&gt&gt&gt&gt&gt&gt;a &gt;= b) &lt;&lt; endl;
+	cout &lt;&lt; (a &gt;= b) &lt;&lt; endl;
 	
 	//
 	
