--- a/notes/cpp/0017.html
+++ b/notes/cpp/0017.html
@@ -81,7 +81,7 @@
         <h1 class="code">17 选择结构-多行if语句.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostr&gt;am&gt;
+#include&lt;iostream&gt;
 using namespace std;
 
 int main()
@@ -93,11 +93,11 @@ int main()
 	//输入考试分数 
 	int score = 0;
 	cout &lt;&lt; "请输入一个考试分数:" &lt;&lt; endl;
-	c&gt&gt&gt;n &gt;&gt; score;
+	cin &gt;&gt; score;
 	//提示用户输入的分数 
 	cout &lt;&lt; "您输入的分数为:" &lt;&lt; score &lt;&lt; endl;
 	//判断 
-	if(sco&gt&gt&gt&gt;e &gt; 600)
+	if(score &gt; 600)
 	{
 		cout &lt;&lt; "恭喜 考上一本大学" &lt;&lt; endl;
 	}
