--- a/notes/cpp/0024.html
+++ b/notes/cpp/0024.html
@@ -81,7 +81,7 @@
         <h1 class="code">24 循环结构案例-猜数字.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostr&gt;am&gt;
+#include&lt;iostream&gt;
 using namespace std;
 
 int main()
