--- a/notes/cpp/0026.html
+++ b/notes/cpp/0026.html
@@ -81,7 +81,7 @@
         <h1 class="code">26 循环结构案例-水仙花数.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostr&gt;am&gt;
+#include&lt;iostream&gt;
 using namespace std;
 
 int main()
@@ -94,7 +94,7 @@ int main()
 //	
 //	int select = 0;
 //	
-//	c&gt&gt&gt&gt&gt&gt&gt&gt&gt&gt&gt&gt&gt&gt&gt;n &gt;&gt; select;  //等待用户输入
+//	cin &gt;&gt; select;  //等待用户输入
 //	
 //	switch(select)
 //	{
