--- a/notes/cpp/0031.html
+++ b/notes/cpp/0031.html
@@ -81,7 +81,7 @@
         <h1 class="code">31 跳转语句-break语句.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostr&gt;am&gt;
+#include&lt;iostream&gt;
 using namespace std;
 
 int main()
@@ -103,7 +103,7 @@ int main()
 		for(int j = 0;j &lt; 9 - i - 1;j++)
 		{
 			//如果第一个数字比第二个数字大，交换两个数字
-			if(arr[&gt&gt&gt&gt&gt&gt&gt&gt&gt&gt&gt&gt;] &gt; arr[j + 1]) 
+			if(arr[j] &gt; arr[j + 1]) 
 			{
 				int temp = arr[j];
 				arr[j] = arr[j + 1];
