--- a/notes/cpp/0033.html
+++ b/notes/cpp/0033.html
@@ -81,7 +81,7 @@
         <h1 class="code">33 跳转语句-goto语句.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostr&gt;am&gt;
+#include&lt;iostream&gt;
 using namespace std;
 
 int main()
