--- a/notes/cpp/0035.html
+++ b/notes/cpp/0035.html
@@ -81,7 +81,7 @@
         <h1 class="code">35 一维数组-数组名.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostr&gt;am&gt;
+#include&lt;iostream&gt;
 using namespace std;
 
 //定义加法函数 
