--- a/notes/cpp/0036.html
+++ b/notes/cpp/0036.html
@@ -81,7 +81,7 @@
         <h1 class="code">36 一维数组案例-五只小猪称体重.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostr&gt;am&gt;
+#include&lt;iostream&gt;
 using namespace std;
 
 //值传递
