--- a/notes/cpp/0038.html
+++ b/notes/cpp/0038.html
@@ -81,7 +81,7 @@
         <h1 class="code">38 一维数组-冒泡排序.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostr&gt;am&gt;
+#include&lt;iostream&gt;
 using namespace std;
 
 //函数的声明
@@ -107,7 +107,7 @@ int main()
 //定义 
 int max(int a, int b)
 {
-	return&gt&gt&gt;a &gt; b ? a : b;
+	return a &gt; b ? a : b;
 }
             </code>
         </pre>
