--- a/notes/cpp/0050.html
+++ b/notes/cpp/0050.html
@@ -81,7 +81,7 @@
         <h1 class="code">49 指针所占内存空间.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostr&gt;am&gt;
+#include&lt;iostream&gt;
 using namespace std;
 #include&lt;string&gt;
 
@@ -104,7 +104,7 @@ int main()
 	
 	//3.通过指针访问结构体变量中的数据
 	//通过结构体指针 访问结构体中的属性 需要利用"-&gt;"
-	cout &lt;&lt; "姓名:" &lt;&lt;&gt&gt;p-&gt;name &lt;&lt; " 年龄:" &lt;&lt;&gt&gt&gt;p-&gt;age &lt;&lt; " 分数:" &lt;&lt;&gt&gt&gt;p-&gt;score &lt;&lt; endl;
+	cout &lt;&lt; "姓名:" &lt;&lt; p-&gt;name &lt;&lt; " 年龄:" &lt;&lt; p-&gt;age &lt;&lt; " 分数:" &lt;&lt; p-&gt;score &lt;&lt; endl;
 	
 	
 	
