--- a/notes/cpp/0053.html
+++ b/notes/cpp/0053.html
@@ -81,7 +81,7 @@
         <h1 class="code">52 const修饰指针.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostr&gt;am&gt;
+#include&lt;iostream&gt;
 using namespace std;
 #include&lt;string&gt;
 
@@ -101,7 +101,7 @@ struct student
 void printStudents(const student * s)
 {
 	//s-&gt;age = 150;
-	cout &lt;&lt; "姓名:" &lt;&lt;&gt&gt;s-&gt;name &lt;&lt; "  年龄:" &lt;&lt;&gt&gt&gt;s-&gt;age &lt;&lt; "  分数:" &lt;&lt;&gt&gt&gt;s-&gt;score &lt;&lt; endl;
+	cout &lt;&lt; "姓名:" &lt;&lt; s-&gt;name &lt;&lt; "  年龄:" &lt;&lt; s-&gt;age &lt;&lt; "  分数:" &lt;&lt; s-&gt;score &lt;&lt; endl;
 }
 
 int main()
