--- a/notes/cpp/0054.html
+++ b/notes/cpp/0054.html
@@ -81,7 +81,7 @@
         <h1 class="code">53 指针和数组.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostr&gt;am&gt;
+#include&lt;iostream&gt;
 using namespace std;
 
 int main()
@@ -91,17 +91,17 @@ int main()
 	int num3 = 0;
 	
 	cout &lt;&lt; "请输入小猪A的体重" &lt;&lt; endl;
-	c&gt&gt&gt;n &gt;&gt; num1;
+	cin &gt;&gt; num1;
 	cout &lt;&lt; "请输入小猪B的体重" &lt;&lt; endl;
-	c&gt&gt;n &gt;&gt; num2;
+	cin &gt;&gt; num2;
 	cout &lt;&lt; "请输入小猪C的体重" &lt;&lt; endl;
-	c&gt&gt;n &gt;&gt; num3;
+	cin &gt;&gt; num3;
 	
 	cout &lt;&lt; "小猪A的体重为:" &lt;&lt; num1 &lt;&lt; endl;
 	cout &lt;&lt; "小猪B的体重为:" &lt;&lt; num2 &lt;&lt; endl;
 	cout &lt;&lt; "小猪C的体重为:" &lt;&lt; num3 &lt;&lt; endl;
 	
-	if(nu&gt&gt&gt&gt&gt&gt&gt&gt&gt&gt&gt&gt&gt&gt&gt&gt;1 &gt; num2)
+	if(num1 &gt; num2)
 	{
 		if(num1 &gt; num3)
 		{
@@ -114,7 +114,7 @@ int main()
 	}
 	else
 	{
-		if(nu&gt&gt&gt&gt&gt&gt;2 &gt; num3)
+		if(num2 &gt; num3)
 		{
 			cout &lt;&lt; "小猪B最重" &lt;&lt; endl;
 		}
