--- a/notes/cpp/0055.html
+++ b/notes/cpp/0055.html
@@ -81,7 +81,7 @@
         <h1 class="code">54 指针和函数.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostr&gt;am&gt;
+#include&lt;iostream&gt;
 using namespace std;
 #include&lt;stdlib.h&gt;  //rand头文件 
 #include&lt;ctime&gt;  //srand头文件 
@@ -100,7 +100,7 @@ int main()
 	
 	while(1)
 	{
-		c&gt&gt&gt;n &gt;&gt; val;
+		cin &gt;&gt; val;
 	
 		if(val &gt; num)
 		{
