--- a/notes/cpp/0059.html
+++ b/notes/cpp/0059.html
@@ -81,7 +81,7 @@
         <h1 class="code">58 结构体指针.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostr&gt;am&gt;
+#include&lt;iostream&gt;
 using namespace std;
 
 int main()
@@ -92,7 +92,7 @@ int main()
 	for(int i = 0;i &lt; 5;i++)
 	{
 		cout &lt;&lt; arr[i] &lt;&lt; endl;
-		if(arr[&gt&gt&gt&gt;] &gt; max)
+		if(arr[i] &gt; max)
 		{
 			max = arr[i];
 		}
