--- a/notes/cpp/0064.html
+++ b/notes/cpp/0064.html
@@ -81,7 +81,7 @@
         <h1 class="code">63 结构体案例2.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostr&gt;am&gt;
+#include&lt;iostream&gt;
 using namespace std;
 #include&lt;string&gt;
 
@@ -103,7 +103,7 @@ void bubbleSort(struct Hero heroArray[], int len)
 		for(int j = 0;j &lt; len - i - 1;j++)
 		{
 			//如果j下标的元素的年龄 大于 j+1下标的元素的年龄，交换两个元素
-			if(heroArray[j].a&gt;e &gt; heroArray[j + 1].age)
+			if(heroArray[j].age &gt; heroArray[j + 1].age)
 			{
 				struct Hero temp = heroArray[j];
 				heroArray[j] = heroArray[j + 1];
