--- a/notes/cpp/0009.html
+++ b/notes/cpp/0009.html
@@ -81,7 +81,7 @@
         <h1 class="code">09 算数运算符-取模.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostr&gt;am&gt;
+#include&lt;iostream&gt;
 using namespace std;
 
 int main()
