--- a/notes/cpp/0010.html
+++ b/notes/cpp/0010.html
@@ -81,7 +81,7 @@
         <h1 class="code">10 算数运算符-前后置递增.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostr&gt;am&gt;
+#include&lt;iostream&gt;
 using namespace std;
 
 int main()
