--- a/notes/cpp/0016.html
+++ b/notes/cpp/0016.html
@@ -81,7 +81,7 @@
         <h1 class="code">16 选择结构-单行if语句.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostr&gt;am&gt;
+#include&lt;iostream&gt;
 using namespace std;
 
 int main()
@@ -90,12 +90,12 @@ int main()
 	//用户输入分数，如果分数大于600，视为考上一本大学，在屏幕上输出 
 	int score = 0;
 	cout &lt;&lt; "请输入分数" &lt;&lt; endl;
-	c&gt&gt&gt;n &gt;&gt; score;
+	cin &gt;&gt; score;
 	
 	cout &lt;&lt; "您输入的分数为:" &lt;&lt; score &lt;&lt; endl;
 	
 	//注意事项: if条件后不要加分号 
-	if(sco&gt&gt&gt&gt;e &gt; 600)
+	if(score &gt; 600)
 	{
 		cout &lt;&lt; "恭喜您考上了一本大学" &lt;&lt; endl;
 	}
