--- a/notes/cpp/0020.html
+++ b/notes/cpp/0020.html
@@ -81,7 +81,7 @@
         <h1 class="code">20 选择结构案例-三只小猪称体重.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostr&gt;am&gt;
+#include&lt;iostream&gt;
 using namespace std;
 
 int main()
