--- a/notes/cpp/0021.html
+++ b/notes/cpp/0021.html
@@ -81,7 +81,7 @@
         <h1 class="code">21 选择结构-三目运算符.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostr&gt;am&gt;
+#include&lt;iostream&gt;
 using namespace std;
 
 int main()
@@ -96,7 +96,7 @@ int main()
 	cout &lt;&lt; "请给电影进行打分" &lt;&lt; endl;
 	
 	int score = 0;
-	c&gt&gt&gt;n &gt;&gt; score;
+	cin &gt;&gt; score;
 	cout &lt;&lt; "您打的分数为:" &lt;&lt; score &lt;&lt; endl;
 	
 	switch(score)
