--- a/notes/cpp/0022.html
+++ b/notes/cpp/0022.html
@@ -81,7 +81,7 @@
         <h1 class="code">22 选择结构-switch语句.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostr&gt;am&gt;
+#include&lt;iostream&gt;
 using namespace std;
 
 int main()
