--- a/notes/cpp/0023.html
+++ b/notes/cpp/0023.html
@@ -81,7 +81,7 @@
         <h1 class="code">23 循环结构-while循环.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostr&gt;am&gt;
+#include&lt;iostream&gt;
 using namespace std;
 
 int main()
