--- a/notes/cpp/0027.html
+++ b/notes/cpp/0027.html
@@ -81,7 +81,7 @@
         <h1 class="code">27 循环结构-for循环.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostr&gt;am&gt;
+#include&lt;iostream&gt;
 using namespace std;
 
 int main()
