--- a/notes/cpp/0028.html
+++ b/notes/cpp/0028.html
@@ -81,7 +81,7 @@
         <h1 class="code">28 循环结构案例-敲桌子.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostr&gt;am&gt;
+#include&lt;iostream&gt;
 using namespace std;
 
 int main()
