--- a/notes/cpp/0032.html
+++ b/notes/cpp/0032.html
@@ -81,7 +81,7 @@
         <h1 class="code">32 跳转语句-continue语句.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostr&gt;am&gt;
+#include&lt;iostream&gt;
 using namespace std;
 
 int main()
