--- a/notes/cpp/0034.html
+++ b/notes/cpp/0034.html
@@ -81,7 +81,7 @@
         <h1 class="code">34 一维数组的定义.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostr&gt;am&gt;
+#include&lt;iostream&gt;
 using namespace std;
 
 //函数的定义
