--- a/notes/cpp/0037.html
+++ b/notes/cpp/0037.html
@@ -81,7 +81,7 @@
         <h1 class="code">37 一维数组案例-元素逆置.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostr&gt;am&gt;
+#include&lt;iostream&gt;
 using namespace std;
 
 //函数常见样式
