--- a/notes/cpp/0039.html
+++ b/notes/cpp/0039.html
@@ -81,7 +81,7 @@
         <h1 class="code">39 二维数组的定义.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostr&gt;am&gt;
+#include&lt;iostream&gt;
 using namespace std;
 #include "头文件/swap.h"
 
