--- a/notes/cpp/0041.html
+++ b/notes/cpp/0041.html
@@ -81,7 +81,7 @@
         <h1 class="code">41 二维数组案例-考试成绩统计.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostr&gt;am&gt;
+#include&lt;iostream&gt;
 using namespace std;
 
 int main()
