--- a/notes/cpp/0047.html
+++ b/notes/cpp/0047.html
@@ -81,7 +81,7 @@
         <h1 class="code">47 - 1 函数的分文件编写.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostr&gt;am&gt;
+#include&lt;iostream&gt;
 using namespace std;
 
 //实现两个数字进行交换
