--- a/notes/cpp/0048.html
+++ b/notes/cpp/0048.html
@@ -81,7 +81,7 @@
         <h1 class="code">47 - 2 swap.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostr&gt;am&gt;
+#include&lt;iostream&gt;
 using namespace std;
 #include&lt;string&gt;
 
