--- a/notes/cpp/0056.html
+++ b/notes/cpp/0056.html
@@ -81,7 +81,7 @@
         <h1 class="code">55 指针数组函数案例.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostr&gt;am&gt;
+#include&lt;iostream&gt;
 using namespace std;
 
 int main()
