--- a/notes/cpp/0057.html
+++ b/notes/cpp/0057.html
@@ -81,7 +81,7 @@
         <h1 class="code">56 结构体定义和使用.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostr&gt;am&gt;
+#include&lt;iostream&gt;
 using namespace std;
 
 int main()
