--- a/notes/cpp/0058.html
+++ b/notes/cpp/0058.html
@@ -81,7 +81,7 @@
         <h1 class="code">57 结构体数组.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostr&gt;am&gt;
+#include&lt;iostream&gt;
 using namespace std;
 
 int main()
