--- a/notes/cpp/0061.html
+++ b/notes/cpp/0061.html
@@ -81,7 +81,7 @@
         <h1 class="code">60 结构体做函数参数.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostr&gt;am&gt;
+#include&lt;iostream&gt;
 using namespace std;
 #include&lt;string&gt;
 
