--- a/notes/cpp/0063.html
+++ b/notes/cpp/0063.html
@@ -81,7 +81,7 @@
         <h1 class="code">62 结构体案例1.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostr&gt;am&gt;
+#include&lt;iostream&gt;
 using namespace std;
 #include&lt;string&gt;
 #include&lt;stdlib.h&gt;
